--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,8 @@ coreKtx = "1.12.0"
 lifecycleRuntimeKtx = "2.7.0"
 hilt = "2.51.1"
 navigation = "2.7.7"
+glide = "4.16.0"
+lottie = "6.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -15,6 +17,9 @@ hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-comp
 
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
+
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
+lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
