--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTheme"
-        android:name=".ThemeApplication"
+        android:name=".MyThemeApplication"
         tools:targetApi="34">
 
         <activity
