--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ hilt = "2.51.1"
 navigation = "2.7.7"
 glide = "4.16.0"
 lottie = "6.1.0"
+dataStore = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -18,6 +19,8 @@ hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-comp
 navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 
+
+dataStore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStore" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
 
