--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ navigation = "2.7.7"
 glide = "4.16.0"
 lottie = "6.1.0"
 dataStore = "1.0.0"
+room = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -21,6 +22,8 @@ navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx",
 
 
 dataStore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStore" }
+room = { group = "androidx.room", name = "room-ktx", version.ref = "room"}
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room"}
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
 lottie = { group = "com.airbnb.android", name = "lottie", version.ref = "lottie"}
 
